# matos-clap

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/core/: config.py
backend/db/: database.py  seed.py
backend/models/: models.py
backend/routers/: availability.py  catalog.py  categories.py  item.py  loan.py  request.py  requested_item.py  root.py  user.py
backend/schema/: users.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: CardNav.tsx  CatalogGrid.tsx  ColorBends.tsx  FilterBar.tsx  Footer.tsx  FuzzyText.tsx  Hello.jsx  ModeToggle.tsx  SearchBar.tsx  StaggeredMenu.tsx  ThemeProvider.tsx
frontend/src/components/ui/: CardNav.tsx  FuzzyText.tsx
frontend/src/hooks/: useCatalog.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Cart.tsx  Error.tsx  Home.tsx  Inventory.tsx  MyLoans.tsx  NewLoan.tsx
frontend/src/types/: CatalogItem.ts
src/api/: database.py  main.py  models.py  seed.py
