[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in FastAPI is standard

[tool.ruff.lint.isort]
known-first-party = ["core", "db", "models", "routers", "schema"]

[tool.ty]
python_version = "3.14"

[tool.ty.environment]
python = ".venv"
